Changing the dir attribute of documentElement doesn't update a child element matching :dir pseudo class https://bugs.webkit.org/show_bug.cgi?id=257133

Reviewed by Antti Koivisto.

The bug was caused by the superfluous condition to not update the effective directionality when
the parent element is the document element. Removed this check to fix the bug.

* LayoutTests/fast/css/dir-pseudo-update-document-element-expected.html: Added.
* LayoutTests/fast/css/dir-pseudo-update-document-element.html: Added.
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::insertedIntoAncestor):

Canonical link: https://commits.webkit.org/265332@main